[package]
name = "run-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.8", features = ["derive", "env"] }
clap_complete = "4.5.7"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }
