[package]
name = "run-http"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
clap-markdown = "0.1"
tokio-stream = { version = "0.1", features = ["io-util"] }

[dev-dependencies]
tokio-test = "0.4"
